# luaosgviewer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.txt  main.cpp  module.i
cmake/: CodeCoverage.cmake  EmbedGtest.cmake  EmbedLuajit.cmake  LuaSWIG.cmake  toolchain-mingw32.cmake  toolchain-windows.cmake
samples/: monkey.osgt  test.lua
src/: EntityLibrary.i  EntityNode.cpp  EntityNode.h  LuaState.cpp  LuaState.h  ModelLibrary.cpp  ModelLibrary.h  ModelLibrary.i  NodeScriptResultHandler.cpp  NodeScriptResultHandler.h  ScriptEngine.cpp  ScriptEngine.h  ScriptLoaderCallback.cpp  ScriptLoaderCallback.h  StaticImport.h  luaX.h  luabinding.h  main.cpp  module.c  module.cpp  module.i  modulemodel.cpp  modulemodel.h  modulemodel.i  nodescriptresulthandler.cpp  nodescriptresulthandler.h  osgLuaBinding.cpp  osgLuaBinding.h  scriptengine.cpp  scriptengine.h  scriptloadercallback.cpp  scriptloadercallback.h
test/: scriptengine_test.cpp
tests/: LuaStateTest.cpp  nodescriptresulthandler_test.cpp  osgLuaBinding_test.cpp  scriptengine_test.cpp
